2015-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fix bug #2408.
	* src/z80/peeph-r2k.def,
	* src/z80/peeph-tlcs90.def:
	  Synced with z80 peepholes.

2015-08-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fix bug #2407 using fix suggested by alvin.

2015-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Cheaper stm8 division workaround (RFE #449).
	* doc/sdccman.lyx:
	  Update standard compliance documentation to reflect recently implemented feature.

2015-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCralloc.hpp,
	  src/stm8/gen.c:
	  Static code analysis to omit stm8 division workaround when safe to do so (RFE #448).

2015-07-31 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-stdarg-5.c:
	  Improve test case.

2015-07-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Workaround for for stm8 division hardware bug.

2015-07-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/cpp/configure.ac:
	* support/cpp/configure:
	* support/cpp/Makefile.in:
	* Makefile.common.in:
	  Fix small spots.

2015-07-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lklex.c:
	  Support unicode character in sdld's command line.
	* sdas/linksrc/lkbank.c:
	  Remove unsupported ".s28" and ".s37" file extensions.

2015-07-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure.in:
	* debugger/mcs51/configure:
	* debugger/mcs51/configure.in:
	* device/lib/pic14/Makefile.in:
	* device/lib/pic14/aclocal.m4:
	* device/lib/pic14/config.h.in:
	* device/lib/pic14/configure.in:
	* device/lib/pic14/libm/Makefile.in:
	* device/lib/pic14/libsdcc/enhanced/Makefile.in:
	* device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in:
	* device/lib/pic14/libsdcc/regular/Makefile.in:
	* device/non-free/lib/pic14/configure:
	* device/non-free/lib/pic14/configure.in:
	* sim/ucsim/configure.in:
	* support/cpp/configure: